automatons/unit_2/simple_grammar/simple_grammar.jj
PARSER_BEGIN(SimpleGrammar)

public class SimpleGrammar{
    public static void main(String args[]) throws ParseException{
        SimpleGrammar parser = new SimpleGrammar(System.in);
        int count = 0;
        parser.Start();
    }
}

PARSER_END(SimpleGrammar)

TOKEN_MGR_DECLS : {
    static int id_index = 0;
    static String[] ids = new String[100];
}

TOKEN : {
            <Comma : ",">
            {
                System.out.println(matchedToken.beginLine + "," +
                        matchedToken.beginColumn + ": Símbolo \"coma\" (" + image + ") encontrado");
            }
            |
           <Boolean : "boolean">
            {
                System.out.println(matchedToken.beginLine + "," +
                        matchedToken.beginColumn + ": Palabra reservada \"boolean\" encontrada");
            }
            |
            <Char : "char">
            {
                System.out.println(matchedToken.beginLine + "," +
                        matchedToken.beginColumn + ": Palabra reservada \"char\" encontrada");
            }
            |
            <Id : ["a"-"z", "A"-"Z"]((["a"-"z", "A"-"Z", "0"-"9"])*)>
            {
                System.out.println(matchedToken.beginLine + "," +
                        matchedToken.beginColumn + ": Identificador \"" + image + "\" encontrado");
                ids[id_index] = image.toString();
                id_index++;
            }
        }

//White spaces
SKIP : {" " | "\t" | "\n" | "\r"}

//Errors
SPECIAL_TOKEN : {
           <BadId : (["0"-"9"])+(["a"-"z", "A"-"Z"])+>
           {
                System.out.println(matchedToken.beginLine + "," +
                        matchedToken.beginColumn + ": Indentificador mal construido \"" +
                        image + "\" encontrado");
           }
        }

//All other chars
SPECIAL_TOKEN : {
            <Error : ~[]>
            {
                System.out.println(matchedToken.beginLine + "," +
                        matchedToken.beginColumn + ": Símbolo no válido \"" + image + "\" encontrado");
            }
        }

void Start() : {}
{
    (D())+<EOF> {
        System.out.println(" \nCantidad de indentificadores encontrados: " + (token_source.id_index) + "\n");
        for(int i=0; i<token_source.id_index; i++){
            System.out.println("Id número " + (i+1) + ": " + token_source.ids[i]);
        }
        }
}

void D() : {}
{
    T() L()
}

void T() : {}
{
    <Boolean> | <Char>
}

void L() : {}
{
    <Id> Lp()
}

void Lp() : {}
{
    (<Comma> <Id> Lp())*
}
